--- a/.github/workflows/azure-login-test.yaml
+++ b/.github/workflows/azure-login-test.yaml
@@ -1,25 +1,12 @@
-# File: .github/workflows/workflow.yml
-
-name: Run Azure Login with OIDC
 on: [push]
 
-permissions:
-      id-token: write
-      contents: read
-jobs: 
+name: AzureLoginSample
+
+jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Azure login
+      - name: Log in with Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  
-      - name: Azure CLI script
-        uses: azure/CLI@v1
-        with:
-          azcliversion: latest
-          inlineScript: |
-            az account show
+          creds: '${{ secrets.AZURE_CREDENTIALS }}'
