--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,15 @@ jobs:
         with:
           creds: "${{ secrets.AZURE_CREDENTIALS }}"
 
+      - name: Pulumi Stack Select
+        uses: pulumi/actions@v4
+        with:
+          command: stack select mydostai/pulumi-python-container/dev
+
       - name: Pulumi up
         uses: pulumi/actions@v4
         with:
           command: up
-          stack-name: dev
+
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
