--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,16 +18,12 @@ jobs:
         uses: azure/login@v1
         with:
           creds: "${{ secrets.AZURE_CREDENTIALS }}"
-
-      - name: Pulumi Stack Select
-        uses: pulumi/actions@v4
-        with:
-          command: stack select mydostai/pulumi-python-container/dev
+      
 
       - name: Pulumi up
         uses: pulumi/actions@v4
         with:
           command: up
-
+          stack-name: mydostai/pulumi-python-container/dev
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
